@@ -31,6 +31,7 @@ use EBox::Squid::Types::TimePeriod;
 
 use Net::LDAP;
 use Net::LDAP::Control::Sort;
+use Net::LDAP::Util qw(canonical_dn escape_filter_value);
 use Authen::SASL qw(Perl);
 use Authen::Krb5::Easy qw(kinit kdestroy kerror kcheck);
 
@@ -279,19 +280,37 @@ sub _adGroupMembers
     my $ldap = $self->_adLdap();
     my $dse = $ldap->root_dse(attrs => ['defaultNamingContext', '*']);
     my $defaultNC = $dse->get_value('defaultNamingContext');
+    $defaultNC = canonical_dn($defaultNC);
+    $group = escape_filter_value($group);
+    my $filter = "(&(objectClass=group)(objectSid=$group))";
     my $result = $ldap->search(base => $defaultNC,
                                scope => 'sub',
-                               filter => "(&(objectClass=group)(objectSid=$group))",
+                               filter => $filter,
                                attrs => ['member']);
     foreach my $groupEntry ($result->entries()) {
         my @members = $groupEntry->get_value('member');
         next unless @members;
         foreach my $memberDN (@members) {
-            my $result2 = $ldap->search(base => $defaultNC,
-                                        scope => 'sub',
-                                        filter => "(&(objectClass=user)(distinguishedName=$memberDN))",
+            $memberDN = canonical_dn($memberDN);
+
+            # Get nested groups
+            my $result2 = $ldap->search(base => $memberDN,
+                                        scope => 'base',
+                                        filter => '(objectClass=group)',
+                                        attrs => ['objectSid']);
+            foreach my $nestedGroupEntry ($result2->entries()) {
+                my $nestedGroupSid = $nestedGroupEntry->get_value('objectSid');
+                next unless defined $nestedGroupSid;
+                my $nestedMembers = $self->_adGroupMembers($nestedGroupSid);
+                push (@{$members}, @{$nestedMembers});
+            }
+
+            # Get users
+            my $result3 = $ldap->search(base => $memberDN,
+                                        scope => 'base',
+                                        filter => "(objectClass=user)",
                                         attrs => ['samAccountName']);
-            foreach my $userEntry ($result2->entries()) {
+            foreach my $userEntry ($result3->entries()) {
                 my $samAccountName = $userEntry->get_value('samAccountName');
                 next unless defined $samAccountName;
                 push (@{$members}, $samAccountName);
